--- a/archives/toutiao-search/2024-04-17.md
+++ b/archives/toutiao-search/2024-04-17.md
@@ -1,55 +1,67 @@
 # 2024-04-17
 
-共 101 条
+共 104 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Apr 17 2024 05:00:55 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Apr 17 2024 06:00:48 GMT+0800 (China Standard Time) -->
 1. [上海男篮北京男篮爆发冲突](https://so.toutiao.com/search?keyword=上海男篮北京男篮爆发冲突)
 1. [上海城市超市全面关店](https://so.toutiao.com/search?keyword=上海城市超市全面关店)
 1. [我国公民科学素质水平新增长](https://so.toutiao.com/search?keyword=我国公民科学素质水平新增长)
 1. [近期4位不满14周岁未成年人被判刑](https://so.toutiao.com/search?keyword=近期4位不满14周岁未成年人被判刑)
-1. [特斯拉部分员工到工厂才发现被解雇](https://so.toutiao.com/search?keyword=特斯拉部分员工到工厂才发现被解雇)
-1. [年轻人开始整顿卧铺车厢了](https://so.toutiao.com/search?keyword=年轻人开始整顿卧铺车厢了)
-1. [美军首次在菲律宾部署中程导弹](https://so.toutiao.com/search?keyword=美军首次在菲律宾部署中程导弹)
-1. [伊朗为何此时向以色列发起报复行动](https://so.toutiao.com/search?keyword=伊朗为何此时向以色列发起报复行动)
-1. [律师：火车下铺任何人不得随意借坐](https://so.toutiao.com/search?keyword=律师：火车下铺任何人不得随意借坐)
 1. [知情人士讲述学生反击醉汉现场经过](https://so.toutiao.com/search?keyword=知情人士讲述学生反击醉汉现场经过)
-1. [妻子因家庭矛盾往丈夫头上泼开水](https://so.toutiao.com/search?keyword=妻子因家庭矛盾往丈夫头上泼开水)
-1. [千股跌停背后深层原因是什么](https://so.toutiao.com/search?keyword=千股跌停背后深层原因是什么)
 1. [比亚迪方程豹跑车SUPER 9发布](https://so.toutiao.com/search?keyword=比亚迪方程豹跑车SUPER+9发布)
-1. [湖南有怀孕女子流浪街头？当地否认](https://so.toutiao.com/search?keyword=湖南有怀孕女子流浪街头？当地否认)
+1. [美军首次在菲律宾部署中程导弹](https://so.toutiao.com/search?keyword=美军首次在菲律宾部署中程导弹)
+1. [特斯拉部分员工到工厂才发现被解雇](https://so.toutiao.com/search?keyword=特斯拉部分员工到工厂才发现被解雇)
+1. [律师：火车下铺任何人不得随意借坐](https://so.toutiao.com/search?keyword=律师：火车下铺任何人不得随意借坐)
+1. [伊朗为何此时向以色列发起报复行动](https://so.toutiao.com/search?keyword=伊朗为何此时向以色列发起报复行动)
+1. [妻子因家庭矛盾往丈夫头上泼开水](https://so.toutiao.com/search?keyword=妻子因家庭矛盾往丈夫头上泼开水)
 1. [台媒：赖清德已感受到“震撼教育”](https://so.toutiao.com/search?keyword=台媒：赖清德已感受到“震撼教育”)
-1. [特斯拉为何大裁员](https://so.toutiao.com/search?keyword=特斯拉为何大裁员)
-1. [央媒评卧铺挂帘：有话好说别道德评判](https://so.toutiao.com/search?keyword=央媒评卧铺挂帘：有话好说别道德评判)
-1. [陪同朔尔茨访华 德企高管纷纷发声](https://so.toutiao.com/search?keyword=陪同朔尔茨访华+德企高管纷纷发声)
-1. [特斯拉裁员10%释放出什么信号](https://so.toutiao.com/search?keyword=特斯拉裁员10%释放出什么信号)
-1. [72岁洪金宝坐轮椅逛深圳Costco](https://so.toutiao.com/search?keyword=72岁洪金宝坐轮椅逛深圳Costco)
-1. [学生与醉汉冲突事件另有1学生被打](https://so.toutiao.com/search?keyword=学生与醉汉冲突事件另有1学生被打)
-1. [特斯拉市值一夜蒸发2200亿](https://so.toutiao.com/search?keyword=特斯拉市值一夜蒸发2200亿)
-1. [极越员工称买小米SU7后被开除](https://so.toutiao.com/search?keyword=极越员工称买小米SU7后被开除)
+1. [年轻人开始整顿卧铺车厢了](https://so.toutiao.com/search?keyword=年轻人开始整顿卧铺车厢了)
+1. [湖南有怀孕女子流浪街头？当地否认](https://so.toutiao.com/search?keyword=湖南有怀孕女子流浪街头？当地否认)
+1. [千股跌停背后深层原因是什么](https://so.toutiao.com/search?keyword=千股跌停背后深层原因是什么)
+1. [曝美通过制裁中国购买伊朗石油法案](https://so.toutiao.com/search?keyword=曝美通过制裁中国购买伊朗石油法案)
 1. [90岁父亲坐椅子上下秒离世](https://so.toutiao.com/search?keyword=90岁父亲坐椅子上下秒离世)
-1. [油价进入8元时代](https://so.toutiao.com/search?keyword=油价进入8元时代)
+1. [陪同朔尔茨访华 德企高管纷纷发声](https://so.toutiao.com/search?keyword=陪同朔尔茨访华+德企高管纷纷发声)
+1. [72岁洪金宝坐轮椅逛深圳Costco](https://so.toutiao.com/search?keyword=72岁洪金宝坐轮椅逛深圳Costco)
+1. [特斯拉为何大裁员](https://so.toutiao.com/search?keyword=特斯拉为何大裁员)
+1. [学生与醉汉冲突事件另有1学生被打](https://so.toutiao.com/search?keyword=学生与醉汉冲突事件另有1学生被打)
 1. [极越回应男子称买小米SU7遭开除](https://so.toutiao.com/search?keyword=极越回应男子称买小米SU7遭开除)
-1. [赵薇名下股权再遭冻结](https://so.toutiao.com/search?keyword=赵薇名下股权再遭冻结)
 1. [中国小伙埃及旅游被当地人争着合照](https://so.toutiao.com/search?keyword=中国小伙埃及旅游被当地人争着合照)
 1. [日媒：日元贬值或无法阻止](https://so.toutiao.com/search?keyword=日媒：日元贬值或无法阻止)
-1. [以反对党领导人：以色列丧失威慑力](https://so.toutiao.com/search?keyword=以反对党领导人：以色列丧失威慑力)
-1. [乌克兰基辅市中心街景实拍](https://so.toutiao.com/search?keyword=乌克兰基辅市中心街景实拍)
-1. [曝美通过制裁中国购买伊朗石油法案](https://so.toutiao.com/search?keyword=曝美通过制裁中国购买伊朗石油法案)
+1. [极越员工称买小米SU7后被开除](https://so.toutiao.com/search?keyword=极越员工称买小米SU7后被开除)
+1. [以外长称已向32国致信呼吁制裁伊朗](https://so.toutiao.com/search?keyword=以外长称已向32国致信呼吁制裁伊朗)
+1. [特斯拉市值一夜蒸发2200亿](https://so.toutiao.com/search?keyword=特斯拉市值一夜蒸发2200亿)
+1. [新房价格上涨城市数增加](https://so.toutiao.com/search?keyword=新房价格上涨城市数增加)
+1. [AI刘强东直播首秀15分钟观看超千万](https://so.toutiao.com/search?keyword=AI刘强东直播首秀15分钟观看超千万)
+1. [央媒评卧铺挂帘：有话好说别道德评判](https://so.toutiao.com/search?keyword=央媒评卧铺挂帘：有话好说别道德评判)
+1. [特斯拉裁员10%释放出什么信号](https://so.toutiao.com/search?keyword=特斯拉裁员10%释放出什么信号)
+1. [因同事吐槽 办公室取消五一假期](https://so.toutiao.com/search?keyword=因同事吐槽+办公室取消五一假期)
+1. [广西壮族自治区原副主席秦如培被查](https://so.toutiao.com/search?keyword=广西壮族自治区原副主席秦如培被查)
+1. [CBA季后赛八强全部产生](https://so.toutiao.com/search?keyword=CBA季后赛八强全部产生)
+1. [美民众封堵大桥高呼解放巴勒斯坦](https://so.toutiao.com/search?keyword=美民众封堵大桥高呼解放巴勒斯坦)
+1. [我国著名呼吸病学学家沈华浩离世](https://so.toutiao.com/search?keyword=我国著名呼吸病学学家沈华浩离世)
+1. [我国一季度GDP同比增长5.3%](https://so.toutiao.com/search?keyword=我国一季度GDP同比增长5.3%)
+1. [运营商锚定6G创新发力](https://so.toutiao.com/search?keyword=运营商锚定6G创新发力)
+1. [方程豹汽车豹8发布](https://so.toutiao.com/search?keyword=方程豹汽车豹8发布)
 1. [小男孩玩耍时不慎从上铺摔下砸到头](https://so.toutiao.com/search?keyword=小男孩玩耍时不慎从上铺摔下砸到头)
+1. [官方回应身穿制服人员疑辱骂河南人](https://so.toutiao.com/search?keyword=官方回应身穿制服人员疑辱骂河南人)
+1. [乌克兰基辅市中心街景实拍](https://so.toutiao.com/search?keyword=乌克兰基辅市中心街景实拍)
+1. [赵薇名下股权再遭冻结](https://so.toutiao.com/search?keyword=赵薇名下股权再遭冻结)
+1. [云南泼水节明星来也得“抱头鼠窜”](https://so.toutiao.com/search?keyword=云南泼水节明星来也得“抱头鼠窜”)
+1. [女子入住81层的酒店被吓到趴地](https://so.toutiao.com/search?keyword=女子入住81层的酒店被吓到趴地)
+1. [56岁病人被救护车拉回家求别拔管](https://so.toutiao.com/search?keyword=56岁病人被救护车拉回家求别拔管)
+1. [消息称特斯拉裁员赔偿标准为N+3](https://so.toutiao.com/search?keyword=消息称特斯拉裁员赔偿标准为N+3)
+1. [拦截伊朗无人机 约旦有多大风险](https://so.toutiao.com/search?keyword=拦截伊朗无人机+约旦有多大风险)
+1. [被举报勾引已婚女的供电所领导停职](https://so.toutiao.com/search?keyword=被举报勾引已婚女的供电所领导停职)
+1. [菲总统：不会让美军使用更多基地](https://so.toutiao.com/search?keyword=菲总统：不会让美军使用更多基地)
+1. [油价进入8元时代](https://so.toutiao.com/search?keyword=油价进入8元时代)
+1. [以反对党领导人：以色列丧失威慑力](https://so.toutiao.com/search?keyword=以反对党领导人：以色列丧失威慑力)
 1. [与醉汉冲突男生已取保回家](https://so.toutiao.com/search?keyword=与醉汉冲突男生已取保回家)
 1. [英领馆若被炸会怎么做？卡梅伦回应](https://so.toutiao.com/search?keyword=英领馆若被炸会怎么做？卡梅伦回应)
 1. [余承东：再过两天P70有好消息](https://so.toutiao.com/search?keyword=余承东：再过两天P70有好消息)
 1. [伊以关系何去何从](https://so.toutiao.com/search?keyword=伊以关系何去何从)
 1. [农民养老金为什么差距大](https://so.toutiao.com/search?keyword=农民养老金为什么差距大)
-1. [拦截伊朗无人机 约旦有多大风险](https://so.toutiao.com/search?keyword=拦截伊朗无人机+约旦有多大风险)
-1. [菲总统：不会让美军使用更多基地](https://so.toutiao.com/search?keyword=菲总统：不会让美军使用更多基地)
-1. [因同事吐槽 办公室取消五一假期](https://so.toutiao.com/search?keyword=因同事吐槽+办公室取消五一假期)
-1. [我国著名呼吸病学学家沈华浩离世](https://so.toutiao.com/search?keyword=我国著名呼吸病学学家沈华浩离世)
 1. [耶伦访华背景：美债务风险显著上升](https://so.toutiao.com/search?keyword=耶伦访华背景：美债务风险显著上升)
-1. [AI刘强东直播首秀15分钟观看超千万](https://so.toutiao.com/search?keyword=AI刘强东直播首秀15分钟观看超千万)
-1. [新房价格上涨城市数增加](https://so.toutiao.com/search?keyword=新房价格上涨城市数增加)
-1. [56岁病人被救护车拉回家求别拔管](https://so.toutiao.com/search?keyword=56岁病人被救护车拉回家求别拔管)
 1. [国家统计局：经济恢复有不平衡性](https://so.toutiao.com/search?keyword=国家统计局：经济恢复有不平衡性)
 1. [俄方：以色列应放弃在中东武力行动](https://so.toutiao.com/search?keyword=俄方：以色列应放弃在中东武力行动)
 1. [詹杜库首次联袂出战奥运会](https://so.toutiao.com/search?keyword=詹杜库首次联袂出战奥运会)
@@ -58,22 +70,15 @@
 1. [专家：肺癌将逐渐向可控的慢病靠拢](https://so.toutiao.com/search?keyword=专家：肺癌将逐渐向可控的慢病靠拢)
 1. [寺庙住持曾犯命案 潜逃23年被抓](https://so.toutiao.com/search?keyword=寺庙住持曾犯命案+潜逃23年被抓)
 1. [央行：我国人均存款约10.8万](https://so.toutiao.com/search?keyword=央行：我国人均存款约10.8万)
-1. [女子入住81层的酒店被吓到趴地](https://so.toutiao.com/search?keyword=女子入住81层的酒店被吓到趴地)
 1. [大V：大家不是没钱而是疯狂存钱](https://so.toutiao.com/search?keyword=大V：大家不是没钱而是疯狂存钱)
 1. [女子确诊肺癌晚期后带癌生存11年](https://so.toutiao.com/search?keyword=女子确诊肺癌晚期后带癌生存11年)
 1. [薛之谦演唱会“眼镜哥”：是前男友](https://so.toutiao.com/search?keyword=薛之谦演唱会“眼镜哥”：是前男友)
 1. [江西抚州12级大风堪比台风登陆](https://so.toutiao.com/search?keyword=江西抚州12级大风堪比台风登陆)
 1. [王毅同伊朗外长通电话](https://so.toutiao.com/search?keyword=王毅同伊朗外长通电话)
-1. [CBA季后赛八强全部产生](https://so.toutiao.com/search?keyword=CBA季后赛八强全部产生)
 1. [外交部：相信伊朗能够把握好局势](https://so.toutiao.com/search?keyword=外交部：相信伊朗能够把握好局势)
-1. [官方回应身穿制服人员疑辱骂河南人](https://so.toutiao.com/search?keyword=官方回应身穿制服人员疑辱骂河南人)
 1. [3000点保卫战再次打响](https://so.toutiao.com/search?keyword=3000点保卫战再次打响)
 1. [孙颖莎领衔国乒主力点评全新赛制](https://so.toutiao.com/search?keyword=孙颖莎领衔国乒主力点评全新赛制)
-1. [消息称特斯拉裁员赔偿标准为N+3](https://so.toutiao.com/search?keyword=消息称特斯拉裁员赔偿标准为N+3)
-1. [我国一季度GDP同比增长5.3%](https://so.toutiao.com/search?keyword=我国一季度GDP同比增长5.3%)
 1. [南昌坠亡小区再迎强对流住户忙加固](https://so.toutiao.com/search?keyword=南昌坠亡小区再迎强对流住户忙加固)
-1. [方程豹汽车豹8发布](https://so.toutiao.com/search?keyword=方程豹汽车豹8发布)
-1. [以外长称已向32国致信呼吁制裁伊朗](https://so.toutiao.com/search?keyword=以外长称已向32国致信呼吁制裁伊朗)
 1. [关于严格执行退市制度的意见发布](https://so.toutiao.com/search?keyword=关于严格执行退市制度的意见发布)
 1. [白宫：乌不是以色列 美国无意参战](https://so.toutiao.com/search?keyword=白宫：乌不是以色列+美国无意参战)
 1. [邓紫棋回应张杰雨中唱《泡沫》](https://so.toutiao.com/search?keyword=邓紫棋回应张杰雨中唱《泡沫》)
@@ -84,8 +89,6 @@
 1. [美国会将审议一系列制裁伊朗新法案](https://so.toutiao.com/search?keyword=美国会将审议一系列制裁伊朗新法案)
 1. [方程豹汽车豹3概念车正式发布](https://so.toutiao.com/search?keyword=方程豹汽车豹3概念车正式发布)
 1. [刘强东数字人首秀背后](https://so.toutiao.com/search?keyword=刘强东数字人首秀背后)
-1. [广西壮族自治区原副主席秦如培被查](https://so.toutiao.com/search?keyword=广西壮族自治区原副主席秦如培被查)
-1. [美民众封堵大桥高呼解放巴勒斯坦](https://so.toutiao.com/search?keyword=美民众封堵大桥高呼解放巴勒斯坦)
 1. [乌克兰称已经没有足够导弹用于防卫](https://so.toutiao.com/search?keyword=乌克兰称已经没有足够导弹用于防卫)
 1. [重庆孕妇被砸事发处为三单位共有](https://so.toutiao.com/search?keyword=重庆孕妇被砸事发处为三单位共有)
 1. [警惕热点事件背后的谣言黑作坊](https://so.toutiao.com/search?keyword=警惕热点事件背后的谣言黑作坊)
