--- a/archives/toutiao-search/2024-04-17.md
+++ b/archives/toutiao-search/2024-04-17.md
@@ -1,39 +1,61 @@
 # 2024-04-17
 
-共 175 条
+共 193 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Apr 17 2024 11:00:48 GMT+0800 (China Standard Time) -->
-1. [中美防长视频通话](https://so.toutiao.com/search?keyword=中美防长视频通话)
-1. [女孩退伍224天后收到部队转账](https://so.toutiao.com/search?keyword=女孩退伍224天后收到部队转账)
+<!-- 最后更新时间 Wed Apr 17 2024 12:00:40 GMT+0800 (China Standard Time) -->
+1. [菲总统：军人南海丧命就请美军介入](https://so.toutiao.com/search?keyword=菲总统：军人南海丧命就请美军介入)
+1. [律师：女子泼丈夫开水属家暴或获刑](https://so.toutiao.com/search?keyword=律师：女子泼丈夫开水属家暴或获刑)
 1. [我国公民科学素质水平新增长](https://so.toutiao.com/search?keyword=我国公民科学素质水平新增长)
-1. [耶伦：美国将对伊朗实施新制裁](https://so.toutiao.com/search?keyword=耶伦：美国将对伊朗实施新制裁)
-1. [同济学生向德国总理提尖锐问题](https://so.toutiao.com/search?keyword=同济学生向德国总理提尖锐问题)
+1. [中美防长视频通话](https://so.toutiao.com/search?keyword=中美防长视频通话)
 1. [4名不满14岁未成年获刑传递啥信号](https://so.toutiao.com/search?keyword=4名不满14岁未成年获刑传递啥信号)
-1. [国奥以多打少0比1不敌日本](https://so.toutiao.com/search?keyword=国奥以多打少0比1不敌日本)
-1. [北京已繁育不飞絮杨柳苗木超20万株](https://so.toutiao.com/search?keyword=北京已繁育不飞絮杨柳苗木超20万株)
-1. [家人给有求生欲的病人拔管是犯罪吗](https://so.toutiao.com/search?keyword=家人给有求生欲的病人拔管是犯罪吗)
 1. [特斯拉万人大裁员轰动美国](https://so.toutiao.com/search?keyword=特斯拉万人大裁员轰动美国)
-1. [我国不包括调休的公共假期是11天](https://so.toutiao.com/search?keyword=我国不包括调休的公共假期是11天)
+1. [网友称对“误收燃气费”说法不买账](https://so.toutiao.com/search?keyword=网友称对“误收燃气费”说法不买账)
+1. [五一购票难度堪比春运](https://so.toutiao.com/search?keyword=五一购票难度堪比春运)
+1. [哈尔滨一小区住户家中突发爆炸起火](https://so.toutiao.com/search?keyword=哈尔滨一小区住户家中突发爆炸起火)
+1. [耶伦：美国将对伊朗实施新制裁](https://so.toutiao.com/search?keyword=耶伦：美国将对伊朗实施新制裁)
+1. [女孩退伍224天后收到部队转账](https://so.toutiao.com/search?keyword=女孩退伍224天后收到部队转账)
 1. [兵马俑坑挖2小时挣6000？官方辟谣](https://so.toutiao.com/search?keyword=兵马俑坑挖2小时挣6000？官方辟谣)
 1. [美媒：以色列准备多款战机打击伊朗](https://so.toutiao.com/search?keyword=美媒：以色列准备多款战机打击伊朗)
-1. [山姆回应有顾客穿着脏鞋坐进小推车](https://so.toutiao.com/search?keyword=山姆回应有顾客穿着脏鞋坐进小推车)
 1. [南部战区位中缅边境举行实兵实弹演习](https://so.toutiao.com/search?keyword=南部战区位中缅边境举行实兵实弹演习)
-1. [复旦研究生珠峰地区登山死亡](https://so.toutiao.com/search?keyword=复旦研究生珠峰地区登山死亡)
-1. [网友称对“误收燃气费”说法不买账](https://so.toutiao.com/search?keyword=网友称对“误收燃气费”说法不买账)
-1. [工信部发布文件减免车辆购置税](https://so.toutiao.com/search?keyword=工信部发布文件减免车辆购置税)
-1. [老旧小区原拆原建 居民自筹4.7亿](https://so.toutiao.com/search?keyword=老旧小区原拆原建+居民自筹4.7亿)
-1. [企业一年内疑被执法检查超200次](https://so.toutiao.com/search?keyword=企业一年内疑被执法检查超200次)
-1. [极越员工旷工去提小米SU7被辞退](https://so.toutiao.com/search?keyword=极越员工旷工去提小米SU7被辞退)
-1. [八宝粥盖子和小米手机镜头完美贴合](https://so.toutiao.com/search?keyword=八宝粥盖子和小米手机镜头完美贴合)
-1. [教授：房地产以旧换新是提前消费](https://so.toutiao.com/search?keyword=教授：房地产以旧换新是提前消费)
-1. [妻子因家庭矛盾往丈夫头上泼开水](https://so.toutiao.com/search?keyword=妻子因家庭矛盾往丈夫头上泼开水)
-1. [菲总统：军人南海丧命就请美军介入](https://so.toutiao.com/search?keyword=菲总统：军人南海丧命就请美军介入)
+1. [詹姆斯23+9+9 湖人擒鹈鹕进季后赛](https://so.toutiao.com/search?keyword=詹姆斯23+9+9+湖人擒鹈鹕进季后赛)
+1. [同济学生向德国总理提尖锐问题](https://so.toutiao.com/search?keyword=同济学生向德国总理提尖锐问题)
+1. [山姆回应有顾客穿着脏鞋坐进小推车](https://so.toutiao.com/search?keyword=山姆回应有顾客穿着脏鞋坐进小推车)
 1. [刘强东数字人直播释放什么信号](https://so.toutiao.com/search?keyword=刘强东数字人直播释放什么信号)
-1. [巴黎奥运会倒计时100天](https://so.toutiao.com/search?keyword=巴黎奥运会倒计时100天)
 1. [广州市原副市长王东被开除公职](https://so.toutiao.com/search?keyword=广州市原副市长王东被开除公职)
-1. [90岁父亲坐椅子上下秒离世](https://so.toutiao.com/search?keyword=90岁父亲坐椅子上下秒离世)
+1. [复旦研究生珠峰地区登山死亡](https://so.toutiao.com/search?keyword=复旦研究生珠峰地区登山死亡)
+1. [极越员工旷工去提小米SU7被辞退](https://so.toutiao.com/search?keyword=极越员工旷工去提小米SU7被辞退)
+1. [家人给有求生欲的病人拔管是犯罪吗](https://so.toutiao.com/search?keyword=家人给有求生欲的病人拔管是犯罪吗)
+1. [教授：房地产以旧换新是提前消费](https://so.toutiao.com/search?keyword=教授：房地产以旧换新是提前消费)
+1. [工信部发布文件减免车辆购置税](https://so.toutiao.com/search?keyword=工信部发布文件减免车辆购置税)
+1. [马竞欧冠出局 格列兹曼几乎流泪](https://so.toutiao.com/search?keyword=马竞欧冠出局+格列兹曼几乎流泪)
+1. [养老金“视同缴费”的空账谁来还](https://so.toutiao.com/search?keyword=养老金“视同缴费”的空账谁来还)
+1. [妻子因家庭矛盾往丈夫头上泼开水](https://so.toutiao.com/search?keyword=妻子因家庭矛盾往丈夫头上泼开水)
+1. [北京已繁育不飞絮杨柳苗木超20万株](https://so.toutiao.com/search?keyword=北京已繁育不飞絮杨柳苗木超20万株)
+1. [精彩时刻：詹姆斯戏耍锡安挑篮得手](https://so.toutiao.com/search?keyword=精彩时刻：詹姆斯戏耍锡安挑篮得手)
+1. [老旧小区原拆原建 居民自筹4.7亿](https://so.toutiao.com/search?keyword=老旧小区原拆原建+居民自筹4.7亿)
+1. [上海100.9万元/m²的房子长什么样](https://so.toutiao.com/search?keyword=上海100.9万元/m²的房子长什么样)
 1. [男子展现绝技“水中太空步”](https://so.toutiao.com/search?keyword=男子展现绝技“水中太空步”)
+1. [企业一年内疑被执法检查超200次](https://so.toutiao.com/search?keyword=企业一年内疑被执法检查超200次)
+1. [我国不包括调休的公共假期是11天](https://so.toutiao.com/search?keyword=我国不包括调休的公共假期是11天)
+1. [女子躺座椅上拒不下飞机致航班延误](https://so.toutiao.com/search?keyword=女子躺座椅上拒不下飞机致航班延误)
+1. [贵州清镇人大常委会原党组书记被查](https://so.toutiao.com/search?keyword=贵州清镇人大常委会原党组书记被查)
+1. [台名嘴谈两岸和平统一如何水到渠成](https://so.toutiao.com/search?keyword=台名嘴谈两岸和平统一如何水到渠成)
+1. [评论员谈成都房子1年没住收燃气费](https://so.toutiao.com/search?keyword=评论员谈成都房子1年没住收燃气费)
+1. [国奥以多打少0比1不敌日本](https://so.toutiao.com/search?keyword=国奥以多打少0比1不敌日本)
+1. [山西国道241工程被曝涉嫌偷工减料](https://so.toutiao.com/search?keyword=山西国道241工程被曝涉嫌偷工减料)
+1. [八宝粥盖子和小米手机镜头完美贴合](https://so.toutiao.com/search?keyword=八宝粥盖子和小米手机镜头完美贴合)
+1. [媒体：伊朗导弹袭击试出美以成色](https://so.toutiao.com/search?keyword=媒体：伊朗导弹袭击试出美以成色)
+1. [石家庄一小区上百居民腹泻 卫健委介入](https://so.toutiao.com/search?keyword=石家庄一小区上百居民腹泻+卫健委介入)
+1. [曝美通过制裁中国购买伊朗石油法案](https://so.toutiao.com/search?keyword=曝美通过制裁中国购买伊朗石油法案)
+1. [上海城市超市全面关店](https://so.toutiao.com/search?keyword=上海城市超市全面关店)
+1. [阿联酋迪拜等地暴雨成灾](https://so.toutiao.com/search?keyword=阿联酋迪拜等地暴雨成灾)
+1. [中国纸币千年金银纪念币将发行](https://so.toutiao.com/search?keyword=中国纸币千年金银纪念币将发行)
+1. [俄罗斯财政部考虑取消黄金出口关税](https://so.toutiao.com/search?keyword=俄罗斯财政部考虑取消黄金出口关税)
+1. [CBA季后赛1/4决赛赛程：18号开打](https://so.toutiao.com/search?keyword=CBA季后赛1/4决赛赛程：18号开打)
+1. [伊以冲突将走向何方](https://so.toutiao.com/search?keyword=伊以冲突将走向何方)
+1. [巴黎奥运会倒计时100天](https://so.toutiao.com/search?keyword=巴黎奥运会倒计时100天)
+1. [90岁父亲坐椅子上下秒离世](https://so.toutiao.com/search?keyword=90岁父亲坐椅子上下秒离世)
 1. [以色列开会3天如何回应伊朗无共识](https://so.toutiao.com/search?keyword=以色列开会3天如何回应伊朗无共识)
 1. [朔尔茨二访 对华政策变了吗](https://so.toutiao.com/search?keyword=朔尔茨二访+对华政策变了吗)
 1. [日本网友谈于金永客串中锋](https://so.toutiao.com/search?keyword=日本网友谈于金永客串中锋)
@@ -42,12 +64,8 @@
 1. [杨柳絮高发期来临 易燃勿点](https://so.toutiao.com/search?keyword=杨柳絮高发期来临+易燃勿点)
 1. [东北简直是E人“天堂”](https://so.toutiao.com/search?keyword=东北简直是E人“天堂”)
 1. [生物胺对人体危害大吗](https://so.toutiao.com/search?keyword=生物胺对人体危害大吗)
-1. [上海城市超市全面关店](https://so.toutiao.com/search?keyword=上海城市超市全面关店)
 1. [年轻人开始整顿卧铺车厢了](https://so.toutiao.com/search?keyword=年轻人开始整顿卧铺车厢了)
-1. [上海100.9万元/m²的房子长什么样](https://so.toutiao.com/search?keyword=上海100.9万元/m²的房子长什么样)
 1. [张伟丽怕分心赛前拒见扎克伯格](https://so.toutiao.com/search?keyword=张伟丽怕分心赛前拒见扎克伯格)
-1. [曝美通过制裁中国购买伊朗石油法案](https://so.toutiao.com/search?keyword=曝美通过制裁中国购买伊朗石油法案)
-1. [山西国道241工程被曝涉嫌偷工减料](https://so.toutiao.com/search?keyword=山西国道241工程被曝涉嫌偷工减料)
 1. [律师：火车下铺任何人不得随意借坐](https://so.toutiao.com/search?keyword=律师：火车下铺任何人不得随意借坐)
 1. [埃尔多安：必须制止以色列野蛮袭击](https://so.toutiao.com/search?keyword=埃尔多安：必须制止以色列野蛮袭击)
 1. [潘虹谈出演舞台剧《繁花2》](https://so.toutiao.com/search?keyword=潘虹谈出演舞台剧《繁花2》)
